# taskflow-intelligent-task-manager

./: .gitignore  PLAN.md  README.md  manage.py  pg_service  pyproject.toml  requirements.txt
taskflow/: settings.py  urls.py
taskflow/accounts/: models.py
taskflow/apps/accounts/: apps.py  models.py  urls.py  views.py
taskflow/apps/accounts/dtos/: useraccount_dto.py
taskflow/apps/accounts/migrations/: 0001_initial.py
taskflow/apps/accounts/serializers/: useraccount_serializer.py
taskflow/apps/accounts/views/: useraccount_view.py
taskflow/apps/core/models/: audition.py
taskflow/apps/taskflows/: apps.py
taskflow/apps/users/models/: users.py
taskflow/config/settings/: __init__.py  apps.py  base.py  database.py  development.py  logging.py  static.py
taskflow/core/dtos/: audition_dto.py
taskflow/core/models/: audition.py
taskflow/core/views/mixins/: soft_delete_mixin.py
taskflow/domain/accounts/entities/: useraccount.py
taskflow/domain/core/entities/mixins/: audition.py
