[tool.poetry]
name = "taskflow-intelligent-task-manager"
version = "0.1.0"
description = ""
authors = ["WillamesCampos <willwjccampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
djangorestframework = "^3.16.0"
celery = "^5.5.2"
psycopg = {extras = ["binary"], version = "^3.2.7"}
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
